# zidaBot

./: .gitignore  CMakeLists.txt  FIX.md  README.md  TODO.md
.claude/agents/: code-reviewer.md  security-reviewer.md  test-runner.md
agents/: code-reviewer.md  project-manager.md  security-reviewer.md
brain/: CMakeLists.txt
brain/app/: brain.cpp  zidabot_replay.cpp
brain/include/brain/: ArbDetector.hpp  BacktestEngine.hpp  BrainCmdLine.hpp  JsonParsers.hpp  LatencyHistogram.hpp  SignalServer.hpp  UnifiedBook.hpp  WsServer.hpp
brain/src/brain/: ArbDetector.cpp  BacktestEngine.cpp  SignalServer.cpp  UnifiedBook.cpp  WsServer.cpp
common/: CMakeLists.txt
common/include/connection_handler/: WsClient.hpp
common/include/orderbook/: OrderBook.hpp  OrderBookController.hpp  OrderBookUtils.hpp
common/include/utils/: HealthServer.hpp  Log.hpp
common/src/connection_handler/: WsClient.cpp
common/src/orderbook/: OrderBookController.cpp
common/src/utils/: Log.cpp
config/: binance.conf  bitget.conf  brain.conf  bybit.conf  kucoin.conf  okx.conf
deploy/: README.md  brain.service  pop@.service  supervisord.conf
docs/: DIAGRAMS.md  EXECUTION_LAYER_PLAN.md  HOWTO.md  PERSISTENCE_SCHEMA.md  backtest.md  brain.md  common.md  pop.md  testing.md
exec/: CMakeLists.txt
exec/app/: exec.cpp
exec/include/exec/: DeadlineOrderTracker.hpp  DryRunOrderClient.hpp  ExecCmdLine.hpp  ExecEngine.hpp  IExecStrategy.hpp  IOrderClient.hpp  ImmediateStrategy.hpp  OrderTracker.hpp  StubOrderClient.hpp
exec/src/exec/: DeadlineOrderTracker.cpp  ExecEngine.cpp  Strategies.cpp  placeholder.cpp
feed/: CMakeLists.txt
feed/include/: CmdLine.hpp
feed/include/abstract/: FeedHandler.hpp
feed/include/md/: VenueAdapter.hpp
feed/include/postprocess/: WsPublishSink.hpp
feed/include/utils/: VenueUtils.hpp
feed/src/md/adapters/: BitgetAdapter.cpp
feed/src/postprocess/: FilePersistSink.cpp
pop/app/: main.cpp
pop/include/: CmdLine.hpp
pop/include/abstract/: FeedHandler.hpp
pop/include/connection_handler/: RestClient.hpp
pop/include/md/: GenericFeedHandler.hpp
pop/include/postprocess/: FilePersistSink.hpp  WsPublishSink.hpp
pop/include/utils/: DebugConfigUtils.hpp
pop/src/connection_handler/: RestClient.cpp
pop/src/md/: GenericFeedHandler.cpp
pop/src/md/adapters/: BinanceAdapter.cpp  BitgetAdapter.cpp  BybitAdapter.cpp  KucoinAdapter.cpp  OKXAdapter.cpp
pop/src/postprocess/: FilePersistSink.cpp  WsPublishSink.cpp
progress/: 2026-03-18.md  2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-04-01.md  2026-04-03.md
python/: example_backtest.py
scripts/: composite_orderbook_ui_app.py  data_pipeline.ipynb  simulation_and_analysis.ipynb
tests/: CMakeLists.txt
tests/brain/: test_arb_detector.cpp  test_brain_cmdline.cpp  test_unified_book.cpp
tests/common/: test_orderbook.cpp  test_orderbook_controller.cpp
tests/exec/: test_dry_run_order_client.cpp  test_exec_cmdline.cpp  test_exec_engine.cpp  test_exec_pipeline.cpp  test_order_tracker.cpp
